Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-service
  namespace: mani
spec:
  selector:
    app: uptime-kuma
  type:  LoadBalancer
  ports:
  - name: uptime-kuma
    port: 3001
